server_err.log
WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.
 * Running on http://127.0.0.1:5000
Press CTRL+C to quit
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-787-025
 * Detected change in 'c:\\Users\\pc\\Desktop\\Cursor T\\app.py', reloading
 * Restarting with stat
  File "c:\Users\pc\Desktop\Cursor T\app.py", line 398
    if transaction_date:
    ^^
SyntaxError: expected 'except' or 'finally' block
: 102-787-025
 * Detected change in 'c:\\Users\\pc\\Desktop\\Cursor T\\app.py', reloading
 * Restarting with stat
  File "c:\Users\pc\Desktop\Cursor T\app.py", line 398
    if transaction_date:
    ^^
SyntaxError: expected 'except' or 'finally' block
